--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
     "jimp": "^0.16.1",
     "jquery": "^3.6.0",
     "usb": "^2.4.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kukus888/Stitkovac-electron.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kukus888/Stitkovac-electron/issues"
+  },
+  "homepage": "https://github.com/kukus888/Stitkovac-electron#readme"
 }
