When printing with IMEI, it doesnt wrap, but is sliced and starts with *

--- a/.gitignore
+++ b/.gitignore
@@ -7753,3 +7753,4 @@ stitkovac-electron-win32-x64/resources/app/TSC/TscBuffer.js
 stitkovac-electron-win32-x64/resources/app/TSC/TscPrinter.js
 stitkovac-electron-win32-x64/resources/app/graphics/icon.png
 stitkovac-electron-win32-x64/resources/app/graphics/Icon.svg
+stitkovac-electron-win32-x64/stitkovac-electron-win32-x64.zip
