--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ TODO.txt.bak
 rcedit-x64.exe
 node_modules/*
 Stitkovac-win32-x64/*
+stitkovac-electron-win32-x64*
+stitkovac-electron-win32-x64/*
 Stitkovac-win32-x64/d3dcompiler_47.dll
 Stitkovac-win32-x64/ffmpeg.dll
 Stitkovac-win32-x64/chrome_100_percent.pak
@@ -7754,3 +7756,5 @@ stitkovac-electron-win32-x64/resources/app/TSC/TscPrinter.js
 stitkovac-electron-win32-x64/resources/app/graphics/icon.png
 stitkovac-electron-win32-x64/resources/app/graphics/Icon.svg
 stitkovac-electron-win32-x64/stitkovac-electron-win32-x64.zip
+stitkovac-electron-win32-x64/config.json
+stitkovac-electron-win32-x64/config.json.bak
